# project-metro-transit

./: .gitignore  0-fetch-gtfs-static.qmd  1-process-gtfs-static.qmd  2-analyze-passengers.md  2-analyze-passengers.qmd  README.md  pyproject.toml
data/: 1-daily_feed_dates.parquet  1-daily_service.parquet
data/1-gtfs_schedules_combined/: calendar.parquet  calendar_dates.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2020-11-28/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2020-12-05/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2020-12-12/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2020-12-19/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2020-12-26/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-01-02/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-01-09/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-01-16/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-01-23/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-01-30/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-02-06/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-02-13/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-02-20/: 00000000.parquet
data/1-gtfs_schedules_combined/shapes/feed_date=2021-02-27/: 00000000.parquet
data/cline_2022_present/: cline_sch.parquet  readme.md
(+289 files in other folders)
